--- a/index.html
+++ b/index.html
@@ -164,30 +164,5 @@
             updatePrice('cardano-price', 'Cardano', data.cardano.usd, data.cardano.usd_24h_change);
             updatePrice('ripple-price', 'Ripple', data.ripple.usd, data.ripple.usd_24h_change);
             updatePrice('polkadot-price', 'Polkadot', data.polkadot.usd, data.polkadot.usd_24h_change);
-            updatePrice('dogecoin-price', 'Dogecoin', data.dogecoin.usd, data.dogecoin.usd_24h_change);
-            updatePrice('avalanche-price', 'Avalanche', data.avalanche.usd, data.avalanche.usd_24h_change);
-            updatePrice('chainlink-price', 'Chainlink', data.chainlink.usd, data.chainlink.usd_24h_change);
-        })
-        .catch(error => console.error('Error fetching cryptocurrency prices:', error));
-
-    function updatePrice(elementId, coinName, price, change) {
-        const element = document.getElementById(elementId);
-        if (isNaN(change)) {
-            element.innerText = `${coinName}: $${price.toFixed(2)} (Data not available)`;
-        } else {
-            const percentChange = parseFloat(change);
-            element.innerHTML = `<strong>${coinName}</strong>: $${price.toFixed(2)} (${percentChange.toFixed(2)}%)`;
-            if (percentChange > 0) {
-                element.classList.add('gain');
-            } else if (percentChange < 0) {
-                element.classList.add('loss');
-            }
-        }
-    }
-</script>
-
-</body>
-</html>
-
-
+            updatePrice('dogecoin-price', 'Dogecoin
 
