--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 	<!-- Crypto Price Ticker Styles -->
 	<style>
 		#crypto-ticker {
-			background-color: transparent; /* Set to transparent */
+			background-color: #f4f4f4;
 			padding: 10px;
 			text-align: center;
 		}
 		.crypto-item {
 			display: inline-block;
 			margin: 0 10px;
-			font-size: 18px; /* Increased font size */
-			font-weight: bold; /* Bold text */
+			font-size: 16px;
 		}
         .gain {
             color: green;
         }
         .loss {
             color: red;
+        }
+        .no-change {
+            color: black;
         }
 	</style>
 </head>
@@ -105,7 +107,7 @@
 		<!-- Contact -->
 		<article id="contact">
 			<h2 class="major">Contact</h2>
-			<form method="post" action="mailto:ben.karpel@outlook.com">
+			<form method="post" action="#">
 				<div class="fields">
 					<div class="field half">
 						<label for="name">Name</label>
@@ -164,5 +166,31 @@
             updatePrice('cardano-price', 'Cardano', data.cardano.usd, data.cardano.usd_24h_change);
             updatePrice('ripple-price', 'Ripple', data.ripple.usd, data.ripple.usd_24h_change);
             updatePrice('polkadot-price', 'Polkadot', data.polkadot.usd, data.polkadot.usd_24h_change);
-            updatePrice('dogecoin-price', 'Dogecoin
+            updatePrice('dogecoin-price', 'Dogecoin', data.dogecoin.usd, data.dogecoin.usd_24h_change);
+            updatePrice('avalanche-price', 'Avalanche', data.avalanche.usd, data.avalanche.usd_24h_change);
+            updatePrice('chainlink-price', 'Chainlink', data.chainlink.usd, data.chainlink.usd_24h_change);
+        })
+        .catch(error => console.error('Error fetching cryptocurrency prices:', error));
+
+    function updatePrice(elementId, coinName, price, change) {
+        const element = document.getElementById(elementId);
+        if (change === null || isNaN(change)) {
+            element.innerText = `${coinName}: $${price.toFixed(2)} (Data not available)`;
+        } else {
+            const percentChange = parseFloat(change);
+            element.innerHTML = `<strong>${coinName}</strong>: $${price.toFixed(2)} (${percentChange.toFixed(2)}%)`;
+            if (percentChange > 0) {
+                element.classList.add('gain');
+            } else if (percentChange < 0) {
+                element.classList.add('loss');
+            } else {
+                element.classList.add('no-change');
+            }
+        }
+    }
+</script>
+
+</body>
+</html>
+
 
