--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
 		}
         .gain {
             color: green;
+            font-weight: bold;
         }
         .loss {
             color: red;
+            font-weight: bold;
         }
         .no-change {
             color: black;
+            font-weight: bold;
         }
 	</style>
 </head>
@@ -192,5 +195,6 @@
 
 </body>
 </html>
+
 
 
