--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
 	<!-- Crypto Price Ticker Styles -->
 	<style>
 		#crypto-ticker {
-			background-color: #f4f4f4;
+			background-color: #282a36; /* Change to match your homepage background color */
 			padding: 10px;
 			text-align: center;
 		}
 		.crypto-item {
 			display: inline-block;
 			margin: 0 10px;
-			font-size: 16px;
+			font-size: 18px; /* Increase font size */
+			font-weight: bold; /* Add font weight */
+			color: white; /* Change text color */
 		}
         .gain {
-            color: green;
-            font-weight: bold;
+            color: limegreen;
         }
         .loss {
             color: red;
-            font-weight: bold;
         }
         .no-change {
-            color: black;
-            font-weight: bold;
+            color: white;
         }
 	</style>
 </head>
@@ -195,6 +194,5 @@
 
 </body>
 </html>
-
 
 
