--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 			background-color: #282a36; /* Change to match your homepage background color */
 			padding: 10px;
 			text-align: center;
-			font-size: 18px; /* Increase font size */
-			font-weight: bold; /* Add font weight */
 		}
 		.crypto-item {
 			display: inline-block;
 			margin: 0 10px;
 			color: white; /* Change text color */
+			font-size: 18px; /* Increase font size */
+			font-weight: bold; /* Add font weight */
 		}
-        .gain {
-            color: limegreen;
-        }
-        .loss {
-            color: red;
-        }
-        .no-change {
-            color: white;
-        }
+		.gain {
+			color: limegreen;
+		}
+		.loss {
+			color: red;
+		}
+		.no-change {
+			color: white;
+		}
 	</style>
 </head>
 <body class="is-preload">
@@ -117,7 +117,7 @@
 					</div>
 					<div class="field half">
 						<label for="email">Email</label>
-						<input type="email" name="email" id="email" />
+						<input type="text" name="email" id="email" />
 					</div>
 					<div class="field">
 						<label for="message">Message</label>
