--- a/index.html
+++ b/index.html
@@ -156,30 +156,31 @@
 <script src="assets/js/main.js"></script>
 <!-- Crypto Price Ticker Script -->
 <script>
-    // Fetch data from CoinGecko API
-    fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,binancecoin,solana,cardano,ripple,polkadot,dogecoin,avalanche,chainlink&vs_currencies=usd&include_24hr_change=true')
+    // Fetch data from CoinCap API
+    fetch('https://api.coincap.io/v2/assets?ids=bitcoin,ethereum,binance-coin,solana,cardano,ripple,polkadot,dogecoin,avalanche,chainlink')
         .then(response => response.json())
         .then(data => {
             // Update prices and daily percent gain/loss
-            updatePrice('bitcoin-price', 'Bitcoin', data.bitcoin.usd, data.bitcoin.usd_24h_change);
-            updatePrice('ethereum-price', 'Ethereum', data.ethereum.usd, data.ethereum.usd_24h_change);
-            updatePrice('binancecoin-price', 'Binance Coin', data.binancecoin.usd, data.binancecoin.usd_24h_change);
-            updatePrice('solana-price', 'Solana', data.solana.usd, data.solana.usd_24h_change);
-            updatePrice('cardano-price', 'Cardano', data.cardano.usd, data.cardano.usd_24h_change);
-            updatePrice('ripple-price', 'Ripple', data.ripple.usd, data.ripple.usd_24h_change);
-            updatePrice('polkadot-price', 'Polkadot', data.polkadot.usd, data.polkadot.usd_24h_change);
-            updatePrice('dogecoin-price', 'Dogecoin', data.dogecoin.usd, data.dogecoin.usd_24h_change);
-            updatePrice('avalanche-price', 'Avalanche', data.avalanche.usd, data.avalanche.usd_24h_change);
-            updatePrice('chainlink-price', 'Chainlink', data.chainlink.usd, data.chainlink.usd_24h_change);
+            updatePrice('bitcoin-price', 'Bitcoin', data.data[0]);
+            updatePrice('ethereum-price', 'Ethereum', data.data[1]);
+            updatePrice('binancecoin-price', 'Binance Coin', data.data[2]);
+            updatePrice('solana-price', 'Solana', data.data[3]);
+            updatePrice('cardano-price', 'Cardano', data.data[4]);
+            updatePrice('ripple-price', 'Ripple', data.data[5]);
+            updatePrice('polkadot-price', 'Polkadot', data.data[6]);
+            updatePrice('dogecoin-price', 'Dogecoin', data.data[7]);
+            updatePrice('avalanche-price', 'Avalanche', data.data[8]);
+            updatePrice('chainlink-price', 'Chainlink', data.data[9]);
         })
         .catch(error => console.error('Error fetching cryptocurrency prices:', error));
 
-    function updatePrice(elementId, coinName, price, change) {
+    function updatePrice(elementId, coinName, data) {
         const element = document.getElementById(elementId);
-        if (change === null || isNaN(change)) {
-            element.innerText = `${coinName}: $${price.toFixed(2)} (Data not available)`;
+        if (!data) {
+            element.innerText = `${coinName}: Data not available`;
         } else {
-            const percentChange = parseFloat(change);
+            const price = parseFloat(data.priceUsd);
+            const percentChange = parseFloat(data.changePercent24Hr);
             element.innerHTML = `<strong>${coinName}</strong>: $${price.toFixed(2)} (${percentChange.toFixed(2)}%)`;
             if (percentChange > 0) {
                 element.classList.add('gain');
