--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div class="content">
 			<div class="inner">
 				<h1>Benjamin Karpel</h1>
-				<p>BlockChain Security Analyst<br>Crypto Currency Enthusiast<a href="https://html5up.net"></a><br />
-					<a href="https://html5up.net/license"></a></p>
+				<p>Blockchain Security Analyst<br>Cryptocurrency Enthusiast<br>
+					<a href="https://html5up.net/license">HTML5 UP License</a></p>
 			</div>
 		</div>
 		<nav>
@@ -34,7 +34,7 @@
 				<li><a href="#intro">Intro</a></li>
 				<li><a href="#work">Projects</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<!--<li><a href="#elements">Elements</a></li>-->
+				<li><a href="#resume">Resume</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -54,17 +54,22 @@
 				My Passion:
 				I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
 				Explore My Work:
-				Curious to see some of my projects? Click [here] to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
+				Curious to see some of my projects? Click <a href="#work" style="color: orange;">here</a> to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
 				Let's Connect:
-				Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! <p>Also check out my <a href="#work" style="color: orange;">Projects</a>.</p>
+				Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together!</p>
 		</article>
 
 		<!-- Work -->
 		<article id="work">
 			<h2 class="major">Work</h2>
 			<span class="image main"><img src="images/BlockChain.jpg" alt="" /></span>
-			<h4>My First Project</h4>
-			<p>Making my URL</p>
+			<h3>My Work Experience</h3>
+			<h4>EDI Functional Analyst, CEVA</h4>
+			<p>Responsible for communicating and explaining business requirements to team members to understand and implement functional demands. Developed and maintained communication links with trading partners and oversaw integration of information. Designed and implemented new EDI maps to support business requirements and ensure seamless integration between systems.</p>
+			<h4>EDI Functional Analyst, Best Buy</h4>
+			<p>Communicated and explained business requirements to team members to understand and implement functional demands. Created, developed, and produced mapping documents. Developed and maintained communication links with trading partners and oversaw integration of information.</p>
+			<h4>Business Analyst, Netrix Inc.</h4>
+			<p>Analyzed key aspects of business to evaluate factors driving results and summarized into presentations. Developed short-term goals and long-term strategic plans to improve risk control and mitigation. Improved business direction by prioritizing customers and implementing changes based on collected feedback.</p>
 		</article>
 
 		<!-- Contact -->
@@ -97,6 +102,46 @@
 			</ul>
 		</article>
 
+		<!-- Resume -->
+		<article id="resume">
+			<h2 class="major">Resume</h2>
+			<p>BENJAMIN KARPEL</p>
+			<p>Vestal, NY 13850 ♦ 518-567-1211 ♦ ben.karpel@outlook.com</p>
+			<h3>PROFESSIONAL SUMMARY</h3>
+			<p>Dynamic EDI Professional committed to optimizing systems performance for reduced operational costs and streamlined workflows. Performs timely designs, installations, validation, and tests alongside routine troubleshooting to facilitate system transitions and minimize downtime. Simplifies complex topics and processes to make technical interactions less intimidating for average users.</p>
+			<h3>SKILLS</h3>
+			<ul>
+				<li>EDI Standards: EDIX12 (ANSI), EDIFACT.</li>
+				<li>EDI/Mapping Applications: DELL BOOMI, TrueCommerce, SPS Commerce.</li>
+				<li>Business/Modeling Tools: MS Project, MS Visio, ALTOVA MAPFORCE, MS Excel, MS Word, MS PowerPoint.</li>
+				<li>Operating Systems: Windows, iOS.</li>
+				<li>ERP Packages: NetSuite, SAP, Microsoft Dynamics 365.</li>
+				<li>Ticketing System: Zendesk, ServiceNow.</li>
+				<li>Data Formats: XML, CSV, JSON.</li>
+				<li>Requirements Specifications, Data Flow Diagrams (DFDs), Acceptance Criteria.</li>
+				<li>Mission Critical Applications, Application Implementation, Data Architecture.</li>
+				<li>Customer Satisfaction, Change Management Process, Revenue Growth.</li>
+				<li>Product Owner, Leading Software Development Teams, Complex Problem-Solving.</li>
+			</ul>
+			<h3>WORK HISTORY</h3>
+			<h4>EDI Functional Analyst, CEVA – Dallas, TX (01/2023 - 04/2024)</h4>
+			<ul>
+				<li>Communicated and explained business requirements to team members to understand and implement functional demands.</li>
+				<li>Strong understanding and working knowledge of EDI formats and Internet functions, especially EDI transaction sets as they relate to the transportation industry: 204, 210, 214, 990, and 997.</li>
+				<li>Developed and maintained communication links with trading partners and oversaw integration of information.</li>
+				<li>Designed and implemented new EDI maps to support business requirements and ensure seamless integration between systems.</li>
+				<li>Performed file tracking for all trading partners sending X12 and XML.</li>
+				<li>Used FTP and SFTP protocols to perform secure information transfer to and from trading partners.</li>
+				<li>Met with clients to understand business requirements, perform gap analysis, and translate technical requirements.</li>
+				<li>Developed and executed test plans to validate EDI transactions and ensure successful end-to-end testing.</li>
+				<li>Ability to develop complex data transformations and business rules to ensure accurate and compliant EDI transmissions.</li>
+			</ul>
+			<!-- Repeat similar structure for other work experiences -->
+			<h3>EDUCATION</h3>
+			<p>Associate in Applied Science in Construction Management</p>
+			<p>SUNY Canton - Class of 2011</p>
+		</article>
+
 	</div>
 
 	<!-- Footer -->
@@ -118,3 +163,4 @@
 
 </body>
 </html>
+
