--- a/index.html
+++ b/index.html
@@ -61,15 +61,33 @@
 
 		<!-- Work -->
 		<article id="work">
-			<h2 class="major">Work</h2>
+			<h2 class="major">Projects</h2>
 			<span class="image main"><img src="images/BlockChain.jpg" alt="" /></span>
-			<h3>My Work Experience</h3>
-			<h4>EDI Functional Analyst, CEVA</h4>
-			<p>Responsible for communicating and explaining business requirements to team members to understand and implement functional demands. Developed and maintained communication links with trading partners and oversaw integration of information. Designed and implemented new EDI maps to support business requirements and ensure seamless integration between systems.</p>
-			<h4>EDI Functional Analyst, Best Buy</h4>
-			<p>Communicated and explained business requirements to team members to understand and implement functional demands. Created, developed, and produced mapping documents. Developed and maintained communication links with trading partners and oversaw integration of information.</p>
-			<h4>Business Analyst, Netrix Inc.</h4>
-			<p>Analyzed key aspects of business to evaluate factors driving results and summarized into presentations. Developed short-term goals and long-term strategic plans to improve risk control and mitigation. Improved business direction by prioritizing customers and implementing changes based on collected feedback.</p>
+			<h3>Work History</h3>
+			<h4>EDI Functional Analyst, CEVA – Dallas, TX (01/2023 - 04/2024)</h4>
+			<ul>
+				<li>Communicated and explained business requirements to team members to understand and implement functional demands.</li>
+				<li>Strong understanding and working knowledge of EDI formats and Internet functions, especially EDI transaction sets as they relate to the transportation industry: 204, 210, 214, 990, and 997.</li>
+				<li>Developed and maintained communication links with trading partners and oversaw integration of information.</li>
+				<li>Designed and implemented new EDI maps to support business requirements and ensure seamless integration between systems.</li>
+				<li>Performed file tracking for all trading partners sending X12 and XML.</li>
+				<li>Used FTP and SFTP protocols to perform secure information transfer to and from trading partners.</li>
+				<li>Met with clients to understand business requirements, perform gap analysis, and translate technical requirements.</li>
+				<li>Developed and executed test plans to validate EDI transactions and ensure successful end-to-end testing.</li>
+				<li>Ability to develop complex data transformations and business rules to ensure accurate and compliant EDI transmissions.</li>
+			</ul>
+			
+			<h4>EDI Functional Analyst, Best Buy – Newark, NJ (06/2021 - 12/2022)</h4>
+			<ul>
+				<li>Communicated and explained business requirements to team members to understand and implement functional demands.</li>
+				<li>Created, developed, and produced mapping documents.</li>
+				<!-- Add more details from your resume -->
+			</ul>
+			
+			<h4>Business Analyst, Netrix Inc. – Newark, NJ (06/2020 - 05/2021)</h4>
+			<ul>
+				<!-- Add details from your resume -->
+			</ul>
 		</article>
 
 		<!-- Contact -->
@@ -101,11 +119,11 @@
 				<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 			</ul>
 		</article>
-
+		
 		<!-- Resume -->
 		<article id="resume">
 			<h2 class="major">Resume</h2>
-			<p>BENJAMIN KARPEL</p>
+			<h3>BENJAMIN KARPEL</h3>
 			<p>Vestal, NY 13850 ♦ 518-567-1211 ♦ ben.karpel@outlook.com</p>
 			<h3>PROFESSIONAL SUMMARY</h3>
 			<p>Dynamic EDI Professional committed to optimizing systems performance for reduced operational costs and streamlined workflows. Performs timely designs, installations, validation, and tests alongside routine troubleshooting to facilitate system transitions and minimize downtime. Simplifies complex topics and processes to make technical interactions less intimidating for average users.</p>
