--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 <head>
-	<title>Dimension by HTML5 UP</title>
+	<title>Benjamin Karpel - Blockchain Security Analyst</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="Benjamin Karpel - Blockchain Security Analyst and Cryptocurrency Enthusiast. Discover my journey, projects, and connect with me.">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -18,9 +19,9 @@
 <div id="wrapper">
 
 	<!-- Header -->
-	<header id="header">
+	<header id="header" role="banner">
 		<div class="image">
-			<span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image" style="width: 200px; height: auto;"></span>
+			<span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin logo" style="width: 200px; height: auto;"></span>
 		</div>
 		<div class="content">
 			<div class="inner">
@@ -29,7 +30,7 @@
 					<a href="https://html5up.net/license">HTML5 UP License</a></p>
 			</div>
 		</div>
-		<nav>
+		<nav role="navigation">
 			<ul>
 				<li><a href="#intro">Intro</a></li>
 				<li><a href="#work">Projects</a></li>
@@ -40,54 +41,30 @@
 	</header>
 
 	<!-- Main -->
-	<div id="main">
+	<div id="main" role="main">
 
 		<!-- Intro -->
 		<article id="intro">
 			<h2 class="major">Intro</h2>
-			<span class="image main"><img src="BlockChain.JPG" alt="" /></span>
-			<p>My journey began in the world of Electronic Data Interchange (EDI), where I honed my skills in managing electronic data flows with precision and security. Over three years of experience in EDI has equipped me with a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
-				My Journey:
-				However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
-				What I Do:
-				As a blockchain security analyst, I specialize in safeguarding the integrity and security of blockchain systems. From identifying vulnerabilities to implementing robust security measures, I ensure that blockchain networks remain resilient against evolving threats.
-				My Passion:
-				I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
-				Explore My Work:
-				Curious to see some of my projects? Click <a href="#work" style="color: orange;">here</a> to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
-				Let's Connect:
-				Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together!</p>
+			<span class="image main"><img src="images/BlockChain.jpg" alt="Blockchain illustration" /></span>
+			<p>My journey began in the world of Electronic Data Interchange (EDI), where I honed my skills in managing electronic data flows with precision and security. Over three years of experience in EDI has equipped me with a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.</p>
+			<p>My Journey:
+			However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.</p>
+			<p>What I Do:
+			As a blockchain security analyst, I specialize in safeguarding the integrity and security of blockchain systems. From identifying vulnerabilities to implementing robust security measures, I ensure that blockchain networks remain resilient against evolving threats.</p>
+			<p>My Passion:
+			I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.</p>
+			<p>Explore My Work:
+			Curious to see some of my projects? Click <a href="#work" style="color: orange;">here</a> to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.</p>
+			<p>Let's Connect:
+			Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together!</p>
 		</article>
 
-		<!-- Work -->
+		<!-- Projects -->
 		<article id="work">
 			<h2 class="major">Projects</h2>
-			<span class="image main"><img src="images/BlockChain.jpg" alt="" /></span>
-			<h3>Work History</h3>
-			<h4>EDI Functional Analyst, CEVA – Dallas, TX (01/2023 - 04/2024)</h4>
-			<ul>
-				<li>Communicated and explained business requirements to team members to understand and implement functional demands.</li>
-				<li>Strong understanding and working knowledge of EDI formats and Internet functions, especially EDI transaction sets as they relate to the transportation industry: 204, 210, 214, 990, and 997.</li>
-				<li>Developed and maintained communication links with trading partners and oversaw integration of information.</li>
-				<li>Designed and implemented new EDI maps to support business requirements and ensure seamless integration between systems.</li>
-				<li>Performed file tracking for all trading partners sending X12 and XML.</li>
-				<li>Used FTP and SFTP protocols to perform secure information transfer to and from trading partners.</li>
-				<li>Met with clients to understand business requirements, perform gap analysis, and translate technical requirements.</li>
-				<li>Developed and executed test plans to validate EDI transactions and ensure successful end-to-end testing.</li>
-				<li>Ability to develop complex data transformations and business rules to ensure accurate and compliant EDI transmissions.</li>
-			</ul>
-			
-			<h4>EDI Functional Analyst, Best Buy – Newark, NJ (06/2021 - 12/2022)</h4>
-			<ul>
-				<li>Communicated and explained business requirements to team members to understand and implement functional demands.</li>
-				<li>Created, developed, and produced mapping documents.</li>
-				<!-- Add more details from your resume -->
-			</ul>
-			
-			<h4>Business Analyst, Netrix Inc. – Newark, NJ (06/2020 - 05/2021)</h4>
-			<ul>
-				<!-- Add details from your resume -->
-			</ul>
+			<span class="image main"><img src="images/BlockChain.jpg" alt="Blockchain illustration" /></span>
+			<!-- Add details of your projects here -->
 		</article>
 
 		<!-- Contact -->
@@ -101,7 +78,7 @@
 					</div>
 					<div class="field half">
 						<label for="email">Email</label>
-						<input type="text" name="email" id="email" />
+						<input type="email" name="email" id="email" />
 					</div>
 					<div class="field">
 						<label for="message">Message</label>
@@ -119,15 +96,17 @@
 				<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 			</ul>
 		</article>
-		
+
 		<!-- Resume -->
 		<article id="resume">
 			<h2 class="major">Resume</h2>
-			<h3>BENJAMIN KARPEL</h3>
-			<p>Vestal, NY 13850 ♦ 518-567-1211 ♦ ben.karpel@outlook.com</p>
-			<h3>PROFESSIONAL SUMMARY</h3>
+			<h3>Benjamin Karpel</h3>
+			<p>Vestal, NY 13850 ♦ 518-567-1211 ♦ <a href="mailto:ben.karpel@outlook.com">ben.karpel@outlook.com</a></p>
+			
+			<h3>Professional Summary</h3>
 			<p>Dynamic EDI Professional committed to optimizing systems performance for reduced operational costs and streamlined workflows. Performs timely designs, installations, validation, and tests alongside routine troubleshooting to facilitate system transitions and minimize downtime. Simplifies complex topics and processes to make technical interactions less intimidating for average users.</p>
-			<h3>SKILLS</h3>
+			
+			<h3>Skills</h3>
 			<ul>
 				<li>EDI Standards: EDIX12 (ANSI), EDIFACT.</li>
 				<li>EDI/Mapping Applications: DELL BOOMI, TrueCommerce, SPS Commerce.</li>
@@ -141,12 +120,13 @@
 				<li>Customer Satisfaction, Change Management Process, Revenue Growth.</li>
 				<li>Product Owner, Leading Software Development Teams, Complex Problem-Solving.</li>
 			</ul>
-			<h3>WORK HISTORY</h3>
+			
+			<h3>Work History</h3>
 			<h4>EDI Functional Analyst, CEVA – Dallas, TX (01/2023 - 04/2024)</h4>
 			<ul>
-				<li>Communicated and explained business requirements to team members to understand and implement functional demands.</li>
+				<li>Communicate and explain business requirements to team members to understand and implement functional demands.</li>
 				<li>Strong understanding and working knowledge of EDI formats and Internet functions, especially EDI transaction sets as they relate to the transportation industry: 204, 210, 214, 990, and 997.</li>
-				<li>Developed and maintained communication links with trading partners and oversaw integration of information.</li>
+				<li>Develop and maintain communication links with trading partners and oversee integration of information.</li>
 				<li>Designed and implemented new EDI maps to support business requirements and ensure seamless integration between systems.</li>
 				<li>Performed file tracking for all trading partners sending X12 and XML.</li>
 				<li>Used FTP and SFTP protocols to perform secure information transfer to and from trading partners.</li>
@@ -154,17 +134,51 @@
 				<li>Developed and executed test plans to validate EDI transactions and ensure successful end-to-end testing.</li>
 				<li>Ability to develop complex data transformations and business rules to ensure accurate and compliant EDI transmissions.</li>
 			</ul>
-			<!-- Repeat similar structure for other work experiences -->
-			<h3>EDUCATION</h3>
-			<p>Associate in Applied Science in Construction Management</p>
-			<p>SUNY Canton - Class of 2011</p>
+			
+			<h4>EDI Functional Analyst, Best Buy – Newark, NJ (06/2021-12/2022)</h4>
+			<ul>
+				<li>Communicate and explain business requirements to team members to understand and implement functional demands.</li>
+				<li>Created, developed, and produced mapping documents.</li>
+				<li>Develop and maintain communication links with trading partners and oversee integration of information.</li>
+				<li>Build and deepen positive and productive relationships with business partners.</li>
+				<li>Collaborate closely with upper management to drive strategy through development and implementation of new EDI processes.</li>
+				 <li>Successfully implemented company compliance with all EDI connections.</li>
+				<li>Managed business operations and business systems all related to supply chain solutions and supplier portals.</li>
+				<li>Monitored/troubleshot daily EDI processing and assisted each business unit with all EDI related activities.</li>
+				<li>Participated in all EDI related projects, organized/maintained documentation per EDI partner, and assisted with EDI setups.</li>
+				<li>Maintained up-to-date documentation on each EDI customer contact, specific rules for order exceptions, etc.</li>
+				<li>Developed and implemented X12 EDI distribution documents (including but not limited to 810, 820, 832, 850, 855, 856, 844, 867).</li>
+				<li>Worked with the Zendesk platform to resolve ongoing issues that arise via EDI for both internal and external customers.</li>
+				<li>Built and updated Trade Partner configurations using specific guidelines and requirements.</li>
+				<li>Experience with EDI validation techniques, including segment/element level validation and code set validation.</li>
+			</ul>
+			
+			<h4>Business Analyst, Netrix Inc. – Newark, NJ (06/2020 - 05/2021)</h4>
+			<ul>
+				<li>Analyzed key aspects of business to evaluate factors driving results and summarized into presentations.</li>
+				<li>Developed short-term goals and long-term strategic plans to improve risk control and mitigation.</li>
+				<li>Improved business direction by prioritizing customers and implementing changes based on collected feedback.</li>
+				<li>Evaluated business requirements, leveraging information to forecast costs relating to hardware, software, and consulting.</li>
+				<li>Trained customer service personnel in strategies for supporting data exchange activities.</li>
+				<li>Built and deepened positive and productive relationships with business partners.</li>
+				<li>Communicate and explain business requirements to team members to understand and implement functional demands.</li>
+				<li>Gather and interpret business requirements from clients.</li>
+				<li>Created and maintained standard operating procedures governing system functions and features.</li>
+				<li>Helped deploy system enhancements to improve field operations.</li>
+				<li>Boosted information sharing by enhancing interfaces between computer systems.</li>
+				<li>Organized system infrastructure documentation and operating procedures, strengthening controls and enhancing overall performance.</li>
+				<li>Developed flowcharts and diagrams to describe and lay out logical operational steps.</li>
+				<li>Conducted data transfer testing and review submissions for exceeding quality standards.</li>
+			</ul>
+			
+			<h3>Education</h3>
+			<p>Associate in Applied Science in Construction Management<br>SUNY Canton - Class of 2011</p>
 		</article>
-
 	</div>
 
 	<!-- Footer -->
-	<footer id="footer">
-		<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+	<footer id="footer" role="contentinfo">
+		<p>&copy; 2024 Benjamin Karpel. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 	</footer>
 
 </div>
@@ -181,4 +195,5 @@
 
 </body>
 </html>
+
 
